# flip7-sim

./: .gitignore  README.md  pyproject.toml
docs/: layout.md
src/flip7_sim/: __init__.py  __main__.py  cards.py  db.py  game.py  plot.py
